Updated README and added Done and Backspace buttons to styles.

--- a/simplelock/src/main/res/layout/activity_lock.xml
+++ b/simplelock/src/main/res/layout/activity_lock.xml
@@ -129,7 +129,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:scaleType="center"
-                android:src="@drawable/ic_done"/>
+                style="@style/SimpleLock.Button.Done"/>
 
             <Button
                 android:layout_width="wrap_content"
@@ -143,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:scaleType="center"
-                android:src="@drawable/ic_backspace_black_48dp"/>
+                style="@style/SimpleLock.Button.Backspace"/>
         </TableRow>
     </TableLayout>
 </LinearLayout>
